- Me button only appears when there is at least one other player selected for Opening Explorer https://github.com/Siderite/lichessTools/issues/104 - Fixed Opening Explorer move list flickering https://github.com/Siderite/lichessTools/issues/103 - implemented drawing of shapes on mobile https://github.com/Siderite/lichessTools/issues/101

--- a/tools/mobileExperience/tool.css
+++ b/tools/mobileExperience/tool.css
@@ -22,6 +22,26 @@ body.lichessTools main.analyse.lichessTools-hideOctopus .gamebook .floor:after {
   display:none;
 }
 
+body.lichessTools div.analyse__controls button.lichessTools-shapeDrawing {
+  padding-bottom: 0.5em;
+  flex: 0 0 2em;
+}
+body.lichessTools div.analyse__controls button.lichessTools-shapeDrawing.lichessTools-greenBrush {
+  background:green;
+  color:white;
+}
+body.lichessTools div.analyse__controls button.lichessTools-shapeDrawing.lichessTools-redBrush {
+  background:red;
+  color:white;
+}
+body.lichessTools div.analyse__controls button.lichessTools-shapeDrawing.lichessTools-blueBrush {
+  background:blue;
+  color:white;
+}
+body.lichessTools div.analyse__controls button.lichessTools-shapeDrawing.lichessTools-yellowBrush {
+  background:yellow;
+  color:black;
+}
 
 /* Prettier Lichess CSS */
 
